--- a/pipeline.ipynb
+++ b/pipeline.ipynb
@@ -123,7 +123,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -4604,6 +4606,82 @@
    ],
    "source": [
     "df_loaded[df_loaded[\"state\"]==\"AZ\"].groupby(\"bus_name\").count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "aspect = {\"Food\": [\"food\",\"pizza\",'cheese','meal','cooked','crostini','flavor','menu','mussel','burger','cousin',\n",
+    "                  'delicious','fish','seasoning','breakfast','brunch','waffle','pastry','omelet','croissant','coffee',\n",
+    "                  'omelette','appetizer','seafood','oyster','dish','lobster','salad','steak','steakhouse','burrito','mexican',\n",
+    "                  'veggie','hot','flatbread','lunch','pastry','waffle','baked','chocolate','fry','beverage','sandwich','bread',\n",
+    "                  'quesodilla','noodle','sauce','turkey','fish','barbecue','brisket','meat','chicken','thai','taco','maize',\n",
+    "                  'cafeteria','chinese','dish','crispy','taiwanese','milkshake','frozen','cold','cafe','bbq'], \n",
+    "          \"Service\": [\"service\",\"experience\",'merchant','ordered','dinning','server','music','pricey',\n",
+    "                                'price','tasted','bartender','happy','time','waitress','waiter','sport','hangout',\n",
+    "                               'customer','vibe','time','management','acoustic','authentic'],\n",
+    "         \"Location\": [\"view\", \"place\",'atmosphere','location','ambience','spot','restaurant','recommend','recommended'\n",
+    "                     'craft','cottage','environment','venue','steakhouse','late','chicago'],\n",
+    "         \"Drink\": [\"drink\", \"wine\", 'cocktail','bar','beer','bourbon','martini','champaign'],\n",
+    "         \"Cost\": ['price','cost','costly']}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "with open(\"../break_week/aspect.pickle\", \"wb\") as f:\n",
+    "    pickle.dump(aspect, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "with open(\"../break_week/aspect.pickle\", \"rb\") as f:\n",
+    "    aspect = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d={\"a\":2, \"b\":6}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{2: 'a', 6: 'b'}"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{v:k for k,v in d.items()}"
    ]
   },
   {
